...
        android:src="@drawable/ic_oval"
        tools:tint="@color/colorPrimary"/>
<!--        tools:tint="@sample/tasks.json/data/backgroundTint" -->


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
...
